# eitaa-api-prototype

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
node-eitaa-client/: README.md  package.json  tsconfig.json
node-eitaa-client/examples/: sample.ts
node-eitaa-client/src/: baseTransport.ts  httpTransport.ts  index.ts  mockTransport.ts
python-eitaa-client/: README.md  pyproject.toml
python-eitaa-client/eitaa_client/: __init__.py  base_transport.py  client.py  http_transport.py  mock_transport.py
python-eitaa-client/examples/: example.py
