[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eitaa-client"             # اگر در PyPI آزاد نبود، یک نام یکتا مثل eitaa-client-ak
version = "0.1.0"
description = "Prototype Eitaa client (Python) with clean API and mock transport"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Ali Kheiri", email="alikheiri10313@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]

[tool.setuptools.packages.find]
where = ["."]
